--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
-entrypoint: "gunicorn -b :$PORT main:app"
+runtime: python39
 env: flex
-runtime: python
-runtime_config: 
-  python_version: 3
+entrypoint: gunicorn -b :$PORT app:app
+runtime_config:
+  python_version: 3.9
